feat: major redesign and new features

--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -265,5 +265,88 @@
       "binance": "بينانس",
       "cih": "البنك التجاري والصناعي"
     }
+  },
+
+"home": {
+    "title": "مرحبا بكم في حاسبة البكالوريا المغربية",
+    "subtitle": "أداة سهلة لحساب معدل البكالوريا حسب النظام المغربي الرسمي",
+    "useStreamCalculator": "استخدام حاسبة الشعب",
+    "howToUse": "كيفية الاستخدام",
+    "useCalculator": "استخدام الحاسبة",
+    "featuresTitle": "مميزات الحاسبة",
+    "feature1": {
+      "title": "دقيقة",
+      "description": "حسابات دقيقة وفقًا للمعاملات الرسمية"
+    },
+    "feature2": {
+      "title": "سهلة",
+      "description": "واجهة بسيطة وسهلة الاستخدام"
+    },
+    "feature3": {
+      "title": "شاملة",
+      "description": "تغطي جميع الشعب والتخصصات"
+    }
+  },
+  "howToUse": {
+    "title": "كيفية استخدام الحاسبة",
+    "introTitle": "مقدمة",
+    "introText": "حاسبة البكالوريا المغربية تمكنك من حساب معدلك النهائي بناء على درجاتك في الامتحانات الجهوية والوطنية والمراقبة المستمرة.",
+    "stepsTitle": "خطوات الاستخدام",
+    "step1": "اختر نوع الطالب (نظامي أو مستقل)",
+    "step2": "اختر الشعبة الدراسية",
+    "step3": "أدخل درجاتك في الحقول المخصصة",
+    "step4": "اضغط على زر الحساب لمعرفة معدلك",
+    "audienceTitle": "الفئات المستهدفة",
+    "audience1": "طلاب السنة الثانية باكالوريا",
+    "audience2": "المقبلين على امتحانات البكالوريا",
+    "goToStreamCalculator": "انتقل الى حاسبة الشعب",
+    "audience3": "الأساتذة والمربين لمتابعة تطور الطلاب",
+    "goToCalculator": "انتقل إلى الحاسبة"
+  },
+  "contact": {
+    "title": "اتصل بنا",
+    "email": "البريد الإلكتروني",
+    "socialMedia": "وسائل التواصل الاجتماعي"
+  },
+  "privacy": {
+    "title": "سياسة الخصوصية",
+    "section1": {
+      "title": "جمع المعلومات",
+      "content": "نحن لا نجمع أي معلومات شخصية عن المستخدمين. جميع الحسابات تتم على جهازك ولا يتم تخزينها على خوادمنا."
+    },
+    "section2": {
+      "title": "استخدام المعلومات",
+      "content": "لا نستخدم أي بيانات تدخلها في الحاسبة لأي غرض آخر غير عرض النتائج لك."
+    },
+    "section3": {
+      "title": "الحماية",
+      "content": "نحن نحرص على حماية خصوصيتك. لا يتم مشاركة أي معلومات مع أطراف ثالثة."
+    }
+  },
+  "about": {
+    "title": "معلومات عنا",
+    "developerTitle": "عن المطور",
+    "developerText": "أنا مطور مغربي أعمل بمفردي، شغوف بإنشاء أدوات رقمية لمساعدة الطلاب على النجاح. تم بناء هذه الحاسبة لتبسيط عملية حساب معدل الباكالوريا وجعل التعليم أكثر سهولة للجميع.",
+    "whyTitle": "لماذا هذا المشروع؟",
+    "whyText": "يعاني العديد من الطلاب المغاربة من حساب معدل الباكالوريا بشكل صحيح. أردت إنشاء أداة بسيطة وسهلة الاستخدام ودقيقة لحل هذه المشكلة للجميع.",
+    "visionTitle": "رؤيتنا",
+    "visionText": "نهدف إلى جعل التعليم أكثر سهولة وشفافية لجميع الطلاب المغاربة.",
+    "contactTitle": "تواصل معنا",
+    "contactText": "هل لديك ملاحظات أو اقتراحات أو ترغب في التعاون؟ يمكنك التواصل معي على: ",
+    "contactEmail": "mohamedadriou3@gmail.com"
+  },
+  "common": {
+    "backToHome": "العودة إلى الصفحة الرئيسية"
+  },
+
+"menu": {
+    "home": "الصفحة الرئيسية",
+    "howToUse": "كيفية الاستخدام",
+    "calculator": "الحاسبة البسيطة",
+    "streamCalculator": "حاسبة الشعبة",
+    "contact": "اتصل بنا",
+    "about": "من نحن",
+    "privacy": "سياسة الخصوصية",
+    "support": "ادعمنا"
   }
 }
